--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.0",
     "axios": "^0.18.0",
     "config": "^2.0.1",
     "koa": "^2.5.3",
+    "koa-art-template": "^1.1.1",
     "koa-body": "^4.0.4",
     "koa-router": "^7.4.0",
-    "log4js": "^3.0.5"
+    "koa-static": "^5.0.0",
+    "log4js": "^3.0.5",
+    "node-schedule": "^1.3.0"
   }
 }
