--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lt_camp",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "log4js": "^3.0.5",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "redis": "^2.8.0",
+    "sequelize": "^4.39.0"
   }
 }
