--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "lt_camp",
-  "version": "0.0.2",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@gitlab.corp.daling.com:dal_fe/lt_camp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "art-template": "^4.13.0",
-    "axios": "^0.18.0",
-    "config": "^2.0.1",
-    "koa": "^2.5.3",
-    "koa-art-template": "^1.1.1",
-    "koa-body": "^4.0.4",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "log4js": "^3.0.5",
-    "node-schedule": "^1.3.0",
-    "redis": "^2.8.0",
-    "sequelize": "^4.39.0"
-  }
+    "name": "lt_camp",
+    "version": "0.0.2",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@gitlab.corp.daling.com:dal_fe/lt_camp.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "art-template": "^4.13.0",
+        "axios": "^0.18.0",
+        "config": "^2.0.1",
+        "koa": "^2.5.3",
+        "koa-art-template": "^1.1.1",
+        "koa-body": "^4.0.4",
+        "koa-router": "^7.4.0",
+        "koa-static": "^5.0.0",
+        "log4js": "^3.0.5",
+        "node-schedule": "^1.3.0",
+        "redis": "^2.8.0",
+        "sequelize": "^4.39.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.18.4"
+    }
 }
