--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
         "log4js": "^3.0.5",
+        "mysql2": "^1.6.3",
         "node-schedule": "^1.3.0",
         "redis": "^2.8.0",
         "sequelize": "^4.39.0"
